tests/snapshots/yaml_suite_snapshots__yaml_suite_FH7J_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Tags on Empty Scalars
  from: NimYAML tests
  tags: tag scalar
  yaml: "- !!str\n-\n  !!null : a\n  b: !!str\n- !!str : !!null\n"
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL <tag:yaml.org,2002:str> :\n   +MAP\n    =VAL <tag:yaml.org,2002:null> :\n    =VAL :a\n    =VAL :b\n    =VAL <tag:yaml.org,2002:str> :\n   -MAP\n   +MAP\n    =VAL <tag:yaml.org,2002:str> :\n    =VAL <tag:yaml.org,2002:null> :\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  dump: "- !!str\n- !!null : a\n  b: !!str\n- !!str : !!null\n"
