tests/snapshots/yaml_suite_snapshots__yaml_suite_FH7J_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- !!str\n- !!null : a\n  b: !!str\n- !!str : !!null\n"
  from: NimYAML tests
  name: Tags on Empty Scalars
  tags: tag scalar
  tree: "+STR\n +DOC\n  +SEQ\n   =VAL <tag:yaml.org,2002:str> :\n   +MAP\n    =VAL <tag:yaml.org,2002:null> :\n    =VAL :a\n    =VAL :b\n    =VAL <tag:yaml.org,2002:str> :\n   -MAP\n   +MAP\n    =VAL <tag:yaml.org,2002:str> :\n    =VAL <tag:yaml.org,2002:null> :\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- !!str\n-\n  !!null : a\n  b: !!str\n- !!str : !!null\n"
