tests/snapshots/yaml_suite_snapshots__yaml_suite_FP8R_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Zero indented block scalar
  from: "@perlpunk"
  tags: folded indent scalar
  yaml: "--- >\nline1\nline2\nline3\n"
  tree: "+STR\n +DOC ---\n  =VAL >line1 line2 line3\\n\n -DOC\n-STR\n"
  json: "\"line1 line2 line3\\n\"\n"
  dump: "--- >\n  line1 line2 line3\n"
