tests/snapshots/yaml_suite_snapshots__yaml_suite_FRK4_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- from: "http://www.yaml.org/spec/1.2/spec.html#id2786868"
  name: Spec Example 7.3. Completely Empty Flow Nodes
  tags: empty-key explicit-key spec flow mapping
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :foo\n   =VAL :\n   =VAL :\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  yaml: "{\n  ? foo :,\n  : bar,\n}\n"
